ocp/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    template.alpha.openshift.io/wait-for-ready: "true"
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        capabilities: {}
        image: ' '
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 420
          periodSeconds: 360
          timeoutSeconds: 240
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 3
          timeoutSeconds: 240
        resources:
          limits:
            memory: 1Gi
        securityContext:
          capabilities: {}
          privileged: false
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /var/lib/jenkins
          name: jenkins-data
        - mountPath: /etc/pki/ca-trust/source/anchors
          name: jenkins-trusted-ca-bundle
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccountName: jenkins
      volumes:
      - emptyDir:
          medium: ""
        name: jenkins-data
      - configMap:
          name: jenkins-trusted-ca-bundle
          optional: true
        name: jenkins-trusted-ca-bundle
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - jenkins
      from:
        kind: ImageStreamTag
        name: jenkins:2
        namespace: openshift
      lastTriggeredImage: ""
    type: ImageChange
  - type: ConfigChange
