ocp/kustomize/base/service-jnlp.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  labels:
    app: jenkins
spec:
  ports:
  - name: agent
    nodePort: 0
    port: 50000
    protocol: TCP
    targetPort: 50000
  selector:
    app: jenkins
  sessionAffinity: None
  type: ClusterIP
